--- a/README
+++ b/README
@@ -23,14 +23,13 @@ git checkout master
 rm -rf public
 
 # Add the gh-pages branch of the repository. It will look like a folder named public
-git subtree add --prefix=public git@github.com:spencerlyon2/hugo_gh_blog.git gh-pages --squash
+git subtree add --prefix=public https://github.com/sat-group/ruben.git gh-pages --squash
 
 # Pull down the file we just committed. This helps avoid merge conflicts
-git subtree pull --prefix=public git@github.com:spencerlyon2/hugo_gh_blog.git gh-pages
+git subtree pull --prefix=public https://github.com/sat-group/ruben.git gh-pages
 
 # Run hugo. Generated site will be placed in public directory (or omit -t ThemeName if you're not using a theme)
-hugo -t ThemeName
-
+hugo -t academic
 
 # Add everything
 git add -A
@@ -39,6 +38,6 @@ git add -A
 git commit -m "Updating site" && git push origin master
 
 # Push the public subtree to the gh-pages branch
-git subtree push --prefix=public git@github.com:spencerlyon2/hugo_gh_blog.git gh-pages
+git subtree push --prefix=public https://github.com/sat-group/ruben.git gh-pages
 
 For more information see: https://gohugo.io/tutorials/github-pages-blog/
