--- a/content/publication/cp14.md
+++ b/content/publication/cp14.md
@@ -11,7 +11,7 @@ selected = false
 title = "Incremental Cardinality Constraints for MaxSAT, CP 2014"
 url_code = ""
 url_dataset = ""
-url_pdf = "http://sat.inesc-id.pt/~ruben/papers/martins-cp14.pdf"
+url_pdf = "/ruben/papers/cp14-open-wbo.pdf"
 url_project = "http://sat.inesc-id.pt/open-wbo/"
 url_slides = ""
 url_video = ""
